--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -794,7 +794,7 @@ function dealSearch(){
 	     				dealListHtml += '	</div>';
 	     			}
 	     			dealListHtml += '	<div class="item-body">';
-	     			dealListHtml += '		<div class="heart" workSq="'+ dealList[i].workSq +'"></div>';
+	     			dealListHtml += '		<div class="heart" workSq="'+ dealList[i].workSq +'" style="cursor:pointer;"></div>';
 	     			dealListHtml += '		<div class="uesr-s">';
 	     			if(dealList[i].artstProfileImgUrl == null || dealList[i].artstProfileImgUrl == ""){
 	     				dealListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
