--- a/src/main/resources/templates/thymeleaf/fo/myPage/alarm.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/alarm.html
@@ -98,7 +98,7 @@ function memberContentData(mbrSq) {
 }
 
 $( document ).ready(function() {
-	
+	$("#alarm").addClass("active");
  	var sMbrSq = $("#mbrSq").html();
  	
 	 memberContentData(sMbrSq);
