--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -77,8 +77,7 @@
 									<th><span class="my-red">작품 대표 사진</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<input class="upload-name" value="파일선택" disabled>
-											
+											<img class="content" id="workMainImgUrl1" style="cursor:pointer"/>
 											<label for="workMainImgUrl">찾아보기</label> 
 											<input type="file" id="workMainImgUrl" class="upload-hidden"> 
 										</div>
@@ -89,8 +88,7 @@
 									<th><span class="my-red">작품 사진(전면)</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<input class="upload-name" value="파일선택" disabled>
-											
+											<img class="content" id="workImgFrtUrl1" style="cursor:pointer"/>
 											<label for="workImgFrtUrl">찾아보기</label> 
 											<input type="file" id="workImgFrtUrl" class="upload-hidden"> 
 										</div>
@@ -101,8 +99,7 @@
 									<th><span class="my-red">작품 사진(후면)</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<input class="upload-name" value="파일선택" disabled>
-											
+											<img class="content" id="workImgRerUrl1" style="cursor:pointer"/>
 											<label for="workImgRerUrl">찾아보기</label> 
 											<input type="file" id="workImgRerUrl" class="upload-hidden"> 
 										</div>
@@ -153,8 +150,7 @@
 									<th><span class="my-red">보증서</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<input class="upload-name" value="파일선택" disabled>
-											
+											<img class="content" id="workGrtUrl1" style="cursor:pointer"/>
 											<label for="workGrtUrl">찾아보기</label> 
 											<input type="file" id="workGrtUrl" class="upload-hidden" accept=".jpeg, .jpg, .png, .pdf"> 
 										</div>
@@ -191,8 +187,7 @@
 									<th><span class="">작품 사진(좌)</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<input class="upload-name" value="파일선택" disabled="disabled">
-											
+											<img class="content" id="workImgLefUrl1" style="cursor:pointer"/>
 											<label for="workImgLefUrl">찾아보기</label> 
 											<input type="file" id="workImgLefUrl" class="upload-hidden"> 
 										</div>
@@ -203,8 +198,7 @@
 									<th><span class="">작품 사진(우)</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<input class="upload-name" value="파일선택" disabled>
-											
+											<img class="content" id="workImgRitUrl1" style="cursor:pointer"/>
 											<label for="workImgRitUrl">찾아보기</label> 
 											<input type="file" id="workImgRitUrl" class="upload-hidden" required> 
 										</div>
@@ -215,8 +209,7 @@
 									<th><span class="">작품 사진(상)</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<input class="upload-name" value="파일선택" disabled="disabled">
-											
+											<img class="content" id="workImgTopUrl1" style="cursor:pointer"/>
 											<label for="workImgTopUrl">찾아보기</label> 
 											<input type="file" id="workImgTopUrl" class="upload-hidden"> 
 										</div>
@@ -227,8 +220,7 @@
 									<th><span class="">작품 사진(하)</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<input class="upload-name" value="파일선택" disabled="disabled">
-											
+											<img class="content" id="workImgBotUrl1" style="cursor:pointer"/>
 											<label for="workImgBotUrl">찾아보기</label> 
 											<input type="file" id="workImgBotUrl" class="upload-hidden"> 
 										</div>
@@ -258,7 +250,7 @@
 					<div class="bat-box5">
 						<button type="button" class="ba-btn1" onclick="collectionReg()"><span>등록하기</span></button>
 						<button type="button" class="ba-btn3" onclick="collectionStorage()"><span>임시저장</span></button>
-						<button type="button" class="ba-btn3" onclick="javascript: $('.myCollection').trigger('click');"><span>취소</span></button>
+						<button type="button" class="ba-btn3" onclick='javascript:pageGoPost({url:"/myCollection",target:"_self",vals:[["mbrSq", sMbrSqVal]]});'><span>취소</span></button>
 					</div>
 					
 					
@@ -274,23 +266,6 @@
 
 <script type="text/javascript">      
 
-/* 파일업로드 */
-$(document).ready(function(){
-  var fileTarget = $('.filebox .upload-hidden');
-
-    fileTarget.on('change', function(){
-        if(window.FileReader){
-            var filename = $(this)[0].files[0].name;
-        } else {
-            var filename = $(this).val().split('/').pop().split('\\').pop();
-        }
-
-        $(this).siblings('.upload-name').val(filename);
-    });
-}); 
-
-
-     
  $(window).on("resize", function () {
     if(window.matchMedia('(min-width: 1537px)').matches)
     {
@@ -448,7 +423,26 @@ $(function() {
 	if(sMbrSqVal == null || sMbrSqVal == ""){
 		modalAlertShow("잘못된 접근입니다. 메인페이지로 이동합니다.", "main");
 	}
-}); 
+});
+
+$(document).on("change", ".upload-hidden", function(e){
+	readImg(e.target, e.target.id);
+});
+
+function readImg(input, imgId){
+    // 인풋 태그에 파일이 있는 경우
+    if(input.files && input.files[0]) {
+        // 이미지 파일인지 검사 (생략)
+        const reader = new FileReader()
+        // 이미지가 로드가 된 경우
+        reader.onload = function (e){
+            const previewImage = document.getElementById(imgId+1);
+            previewImage.src = e.target.result;
+        }
+        // reader가 이미지 읽도록 하기
+        reader.readAsDataURL(input.files[0]);
+    }
+}
 
 var work = new Object();
 work.workTypCd = 'COLL';
