--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -228,6 +228,8 @@ jQuery(document).ready(function() {
 	conTitleHtml += '<h3>My Deal</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
 	
+	$("#myDeal").addClass("active");
+	
 	myDealSearchList();
 });   
 
