--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
@@ -1943,7 +1943,7 @@ $(function() {
 	var conTitleHtml = "";
 	conTitleHtml += '<h3>포트폴리오</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
-    		
+	$("#information").addClass("active");
 });
     </script>
     
