--- a/src/main/resources/templates/thymeleaf/fo/myPage/secession.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/secession.html
@@ -245,6 +245,8 @@ $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
 		var conTitleHtml = "";
 		conTitleHtml += '<h3>설정</h3>';
 		$("#conTitle").append(conTitleHtml).trigger("create");
+		
+		$("#withdrawal").addClass("active");
 	});         
 </script>
 </body>
