--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -2918,11 +2918,14 @@ display: none;}
     display: flex;
     width: 100%;
 }
+
+/* 20220425 */
 .input-group input{
-    flex: 1;
-    width: 330px;
-    margin-right: 15px;
+    /* flex: 1; */
+    width: 37rem;
+    margin-right: 3rem;
 }
+
 .input-group .group-btn{
     width: 21rem;
     background: #999999;
@@ -5326,6 +5329,21 @@ position: relative;background-color: #fbfbfb;}
 
 
 
+
+
+/* 추가 시작 */
+.item-div-img.active-on .item-ho{display:block;}
+.item-div-img.active-on:before{content:'';position: absolute;width: 100%;background: rgb(51 51 51 / 80%);height: 100%;left: 0;top: 0;z-index: 1;}
+.item-div-img.sale-on .sale-div{display:block;}
+.item-div-img.auction-on .auction-div{display:block;}
+
+
+.id-time{position: absolute;right: 5rem;top: 50%;transform: translateY(-50%);font-size: 2.1rem;color: #e9625c;}
+.login-body .id-box{padding: 45px;}
+.login-body .id-box .input-group input{width:255px;}
+
+.member-body .input-group input{width:41rem;}
+/* 추가 끝 */
 
 
 
