--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -2649,11 +2649,14 @@ display: inline-block;margin-left: 13px;}
     display: flex;
     width: 100%;
 }
+
+/* 20220425 */
 .input-group input{
-    flex: 1;
-    width: 330px;
+    /* flex: 1; */
+    width: 359px;
     margin-right: 15px;
 }
+
 .input-group .group-btn{
     width: 148px;
     background: #999999;
@@ -4904,15 +4907,13 @@ position: relative;background-color: #fbfbfb;}
 
 
 
-/* */
+/* 추가 시작 */
 .item-div-img.active-on .item-ho{display:block;}
 .item-div-img.active-on:before{content:'';position: absolute;width: 100%;background: rgb(51 51 51 / 80%);height: 100%;left: 0;top: 0;z-index: 1;}
 .item-div-img.sale-on .sale-div{display:block;}
 .item-div-img.auction-on .auction-div{display:block;}
 
-
-
-
 .id-time{position: absolute;right: 30px;top: 50%;transform: translateY(-50%);font-size: 14px;color: #e9625c;}
 .login-body .id-box{padding: 45px;}
 .login-body .id-box .input-group input{width:255px;}
+/* 추가 끝 */
