--- a/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
@@ -1,30 +1,6 @@
 <!DOCTYPE HTML>
-<html lang="ko">
-
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-	<meta name="mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="theme-color" content="#000000">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>딜링아트</title>
-	<link type="text/css" rel="stylesheet" href="resources/css/font.css" />
-	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
-	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css">
-	<link type="text/css" rel="stylesheet" href="resources/css/common_pc.css">
-	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select.css">
-	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/css/ui_mo.css" />
-	<link type="text/css" media="screen and (min-width: 751px) and (max-width: 1536px)" rel="stylesheet" href="resources/css/ui_tablet.css" />
-	<link type="text/css" media="screen and (min-width: 1537px)" rel="stylesheet" href="resources/css/ui_pc.css" />
-
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script type="text/javascript" src="resources/js/bootstrap-select.js"></script>
-    
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.swi-box::before{background-color:#f9f9f9;}
@@ -35,61 +11,7 @@
 
 <body>
 	<div class="wrap">
-		<div class="head-wrap">
-			<div class="head">
-				<div class="h-logo"><a href="#"><img src="resources/img/logo.png" /></a></div>
-				<div class="h-gnb">
-					<div class="navbox">
-						<nav>
-							<li><a href="#">Deal</a></li>
-							<li><a href="#">Megazine</a></li>
-							<li><a href="#">Artist Library</a></li>
-							<li><a href="#">About</a></li>
-						</nav>
-					</div>
-					
-					<!-- 로그인전 -->
-					<div class="login-hide h-text"  style="display:none;">
-						<span>LOGIN</span>
-						<span>JOIN</span>
-					</div>
-					
-					<!-- 로그인후 -->
-					<div class="login-show h-img">
-						<span class="sog-1"><a href="#"><img src="resources/img/icon-1.png" /></a></span>
-						<span class="sog-2 lg-my"><a href="#"><img src="resources/img/icon-2.png" /></a></span>
-						<div class="s-hov">
-							<ul>
-								<li><a href="#"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
-								<li><a href="#"><img src="resources/img/ic-2.jpg" /><span>경매 / 거래 내역</span></a></li>
-								<li><a href="#"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
-								<li><a href="#"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
-								<li><a href="#"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
-							</ul>
-							<button type="button" class="btn-1">로그아웃</button>
-						</div>
-					</div>
-					
-					<!-- 검색 -->
-					<a href="" class="icon-search" data-toggle="modal" data-target="#myModal"><img src="resources/img/icon-3.png"></a>
-					
-				</div>
-			</div>
-			<div class="bab-bo">
-				<div class="ta-sho">
-					<a href="#"><span>Guide</span></a>
-				</div>
-				<div class="mab-rb">
-					<a href="#" class="mab-a"><span>Guide</span></a>
-					<ul class="mab-ul">
-						<li><a href="#"><img src="resources/img/icon-4.png" /> <span>거래방법</span></a></li>
-						<li><a href="#"><img src="resources/img/icon-5.png" /> <span>작가등록</span></a></li>
-						<li><a href="#"><img src="resources/img/icon-6.png" /> <span>작품등록</span></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		
+		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		<div class="body-wrap coll-mobile">
 			
 			<div class="contents">
@@ -103,9 +25,9 @@
 					<div class="mgz-body max-1500">
 						<div class="mgz-link">
 							<ul class="mgz-ul">
-								<li><a href="insights.html">Insights</a></li>
-								<li><a href="media.html">Media</a></li>
-								<li class="active"><a href="exhibition.html">Exhibition</a></li>
+								<li><a href="/insights">Insights</a></li>
+								<li><a href="/media">Media</a></li>
+								<li class="active"><a href="/exhibition">Exhibition</a></li>
 							</ul>
 						</div>
 						
@@ -159,71 +81,7 @@
 			
 			
 		</div>
-		<div class="footer-wrap">
-			<div class="footer-box">
-				<div class="footer-nav">
-					<ul class="">
-						<li><a href="#">경매약관</a></li>
-						<li><a href="#">온라인경매약관</a></li>
-						<li><a href="#">개인정보처림방침</a></li>
-						<li><a href="#">내부정보관리규정</a></li>
-					</ul>
-					<div class="footer-icon">
-						<a href="#"><img src="resources/img/sns-f.jpg" /></a>
-						<a href="#"><img src="resources/img/sns-t.jpg" /></a>
-						<a href="#"><img src="resources/img/sns-i.jpg" /></a>
-					</div>
-				</div>
-				
-				<div class="pc-on">
-					<div class="footer-text">상호 : MANSION9  대표 : 이영선  사업자등로번호 : 473-81-01206[사업자정보확인]</div>
-					<div class="footer-text">
-						<ol>
-							<li>주소 : 04075 서울특별시 마포구 토정로 11길 60(상수동)1F</li>
-							<li>대표번호 : 070-4267-7371</li>
-							<li>팩스번호 : 02-336-2920</li>
-						</ol>
-					</div>
-					<div class="footer-text">
-						<ol>
-							<li>통신판매업 신고 : 제 2019-서울마포-1063호</li>
-							<li>개인정보관리책임자 : 이영선(privacy@mainsion9.co.kr</li>
-							<li>이메일 : cafe24@mainsion9.co,kr</li>
-						</ol>
-					</div>
-				</div>
-				
-				
-				<div class="tb-on max-100">
-					<div class="footer-text">상호 : MANSION9<br/>대표 : 이영선  사업자등로번호 : 473-81-01206[사업자정보확인]</div>
-					<div class="footer-text">
-						<ol>
-							<li class="dib af-dn">주소 : 04075 서울특별시 마포구 토정로 11길 60(상수동)1F</li>
-							<li class="">대표번호 : 070-4267-7371</li>
-							<li class="af-dn">팩스번호 : 02-336-2920</li>
-						</ol>
-					</div>
-					<div class="footer-text">
-						<ol>
-							<li class="af-dn">통신판매업 신고 : 제 2019-서울마포-1063호</li>
-							<li>개인정보관리책임자 : 이영선(privacy@mainsion9.co.kr 이메일 : cafe24@mainsion9.co,kr</li>
-						</ol>
-					</div>
-				</div>
-				
-				<div class="mo-on max-100">
-					<div class="footer-text">상호 : MANSION9<br/>대표 : 이영선</div>
-					<div class="footer-text">
-						<ol>
-							<li class="dib af-dn">주소 : 04075 서울특별시 마포구 토정로 11길 60(상수동)1F</li>
-							<li class="dib af-dn">대표번호 : 070-4267-7371</li>
-							<li class="af-dn">팩스번호 : 02-336-2920</li>
-							<li class="af-dn">이메일 : cafe24@mainsion9.co,kr</li>
-						</ol>
-					</div>
-				</div>
-			</div>
-		</div>
+		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 	</div>
 
 
