--- a/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
@@ -522,6 +522,8 @@ jQuery(document).ready(function() {
 	var conTitleHtml = "";
 	conTitleHtml += '<h3>설정</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
+	
+	$("#memberEdit").addClass("active");
 });   
 </script>
 	
