--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -73,8 +73,8 @@
 						<ul>
 							<li><a href="/memberEdit"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
 							<li><a href="/myDeal"><img src="resources/img/ic-2.jpg" /><span>경매 / 거래 내역</span></a></li>
-							<li><a href="/myCollection"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
-							<li><a href="/scrap"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
+							<li class="myCollection"><a href="#"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
+							<li class="scrap"><a href="#"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
 							<li><a href="/customerService"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
 						</ul>
 						<button type="button" class="btn-1" onclick="logout()">로그아웃</button>
@@ -848,7 +848,33 @@ function btn_search_onclick(){
 	}
 	
 }
-
+$(document).on("click", ".myWork", function(){
+	pageGoPost({
+		url:"/myWork",
+		target:"_self",
+		vals:[
+			["artstSq", artstSq]
+		]
+	});
+});
+$(document).on("click", ".myCollection", function(){
+	pageGoPost({
+		url:"/myCollection",
+		target:"_self",
+		vals:[
+			["mbrSq", sMbrSqVal]
+		]
+	});
+});
+$(document).on("click", ".scrap", function(){
+	pageGoPost({
+		url:"/scrap",
+		target:"_self",
+		vals:[
+			["mbrSq", sMbrSqVal]
+		]
+	});
+});
 //Input Box Null Check
 function isEmpty(str){
     
