--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -190,7 +190,7 @@
 					</div>
 					<div class="radio-3 rad-mg">
 						<input type="checkbox" id="a1" name="cc" />
-						<label for="a1"><span></span>자동로그인..</label>
+						<label for="a1"><span></span>자동로그인</label>
 					</div>
 					<div class="bat-box3">
 						<button type="button" class="ba-btn1" onclick="login()"><span>Login</span></button>
@@ -207,9 +207,9 @@
 					<div class="login-lk">
 						<p>소셜아이디로 간편하게 로그인할 수 있습니다.</p>
 						<div class="ll-img">
-							<a href="javascript:fnModalAlert();"><img src="resources/img/icon-naver.png" /></a>
-							<a href="javascript:fnModalAlert();"><img src="resources/img/icon-kaka.png" /></a>
-							<a href="javascript:fnModalAlert();"><img src="resources/img/icon-google.png" /></a>
+							<a href="javascript:naverUserLogin();"><img src="resources/img/icon-naver.png"/></a>
+							<a href="javascript:kakaoUserLogin();"><img src="resources/img/icon-kaka.png" /></a>
+							<a href="javascript:googleUserLogin();"><img src="resources/img/icon-google.png" /></a>
 						</div>
 					</div>
 					
@@ -219,7 +219,26 @@
 	</div>
 </div>
 
+<script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js" charset="utf-8"></script>
+
 <script>
+
+	function naverUserLogin() {
+		var naverUrl = "https://nid.naver.com/oauth2.0/authorize?response_type=code&client_id=bfkY1xo1RrQOxpKeXWD2&state=state&redirect_uri=http://localhost:8088/auth/naver/callback";
+	 	window.open(naverUrl,"_blank","height=400,width=377,top=100,left=200,scrollbars=yes,resizable=yes");
+	}
+	
+	function kakaoUserLogin() {
+		var kakaoUrl = "https://kauth.kakao.com/oauth/authorize?client_id=69c902a158be248a93aca88ba9ff0929&redirect_uri=http://localhost:8088/auth/kakao/callback&response_type=code";
+	 	window.open(kakaoUrl,"_blank","height=400,width=377,top=100,left=200,scrollbars=yes,resizable=yes");
+	}
+	
+	function googleUserLogin() {
+		//var googleUrl = "https://accounts.google.com/o/oauth2/v2/auth?scope=https://www.googleapis.com/auth/drive.metadata.readonly&access_type=offline&include_granted_scopes=true&response_type=code&state=state_parameter_passthrough_value&redirect_uri=http://localhost:8088/auth/google/callback&client_id=449213206661-c9iopfi3an6fglsajlq2npnp1c12f14s.apps.googleusercontent.com";
+		var googleUrl = "https://accounts.google.com/o/oauth2/v2/auth?scope=https://www.googleapis.com/auth/userinfo.email&access_type=offline&include_granted_scopes=true&response_type=code&state=state_parameter_passthrough_value&redirect_uri=http://localhost:8088/auth/google/callback&client_id=449213206661-c9iopfi3an6fglsajlq2npnp1c12f14s.apps.googleusercontent.com";
+	 	window.open(googleUrl,"_blank","height=600,width=577,top=100,left=200,scrollbars=yes,resizable=yes");
+	}
+		
 	function fnMemberJoin(){
 		$('#memberModal').modal('show');
 		//로그인 모달
