아이디 찾기, 비밀번호 찾기, 회원중복체크 개발

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -355,6 +355,7 @@ function searchOption_onclick(clickId){
 			searchStrtDate.value = dateFormat(getNextDate(-1095), ".");
 			searchEndngDate.disabled = true;
 			searchStrtDate.disabled = true;
+			break;
 	}
 }
 function searchDateCheck(){
