--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -201,9 +201,9 @@
 					</div>
 					<div class="login-chs">
 						<div class="login-tt">
-							<a href="javascript:fnModalAlert();">아이디(이메일) / 비밀번호 찾기</a>
-							
-							<p class="lb-p2"><a href="javascript:fnMemberJoin();" data-target="#memberModal"><span>회원가입</span></a></p>
+							<a href="#" onclick="openFindIdModal()" data-toggle="modal">아이디 찾기</a>
+							<p class="lb-p2"><a href="#" onclick="openFindPwdModal()" data-toggle="modal">비빌먼호 찾기</a></p>
+							<p class="lb-p2"><a href="#" data-toggle="modal" data-target="#memberModal"><span>회원가입</span></a></p>
 							<!-- <span style="cursor:pointer;" class="lb-p2" data-toggle="modal" data-target="#memberModal">회원가입</span> -->
 						</div>
 						
@@ -222,6 +222,341 @@
 		</div>
 	</div>
 </div>
+
+<!-- 아이디찾기 -->
+<div class="modal fade modal-s" id="idModal" tabindex="-1" role="dialog" aria-labelledby="idModalLabel" aria-hidden="true">
+	<form id="findId" name="findId" method="post">
+	<div class="modal-dialog modal-baeg max-w480">
+		<div class="modal-content">
+			<div class="modal-header">
+				<div class="baegs">
+					<h2>아이디찾기</h2>
+				    <img src="resources/img/ba/icon-3.png" class="con-img" />
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body login-body">
+				<div class="id-box">
+					<!-- <div class="input-box">
+						<input type="text" class="input-3" placeholder="이름" />
+					</div>
+					<div class="input-box input-group">
+						<div class="input-drox">
+							<input type="text" class="input-3" placeholder="010-0000-0000" />
+						</div>
+						<button type="button" class="group-btn" id="findIdCpNum">인증번호 받기</button>
+					</div>
+					<div class="input-box input-group">
+						<div class="input-drox">
+							<input type="text" class="input-3" placeholder="인증번호를 입력하세요" />
+							<span class="id-time">60초</span>
+						</div>
+						<button type="button" class="group-btn">재전송</button>
+					</div> -->
+					<div class="bat-box3 mg_t30">
+						<button type="button" class="ba-btn2" id="findIdCpNum"><span>본인명의 휴대전화로 인증</span></button>
+					</div>
+					<div class="input-box">
+						<input type="checkbox" id="findIdmbrId" name="findIdmbrId" style="display:none;"/>
+						<label for="findIdmbrId"  style="display:none;font-size:large;font-weight:bold;"></label>
+						<p class="table-p" id="mbrRegDt" style="display:none;font-size:medium;"></p>
+					</div>
+					
+					<div class="bat-box3 mg_t30">
+						<button type="button" class="ba-btn1" id="findIdLoginBtn" style="display:none;"><span>로그인</span></button>
+						<button type="button" class="ba-btn2" id="findIdFindPwdBtn" style="display:none;"><span>비밀번호 찾기</span></button>
+					</div>
+					<input type="hidden" name="m" value="checkplusSerivce">	<!-- 필수 데이타로, 누락하시면 안됩니다. -->
+					<input type="hidden" name="EncodeData">					<!-- 위에서 업체정보를 암호화 한 데이타입니다. -->
+				</div>
+			</div>
+		</div>
+	</div>
+	</form>
+</div>
+<script th:inline="javascript">
+function openFindIdModal(){
+	$("#loginModal").modal("hide");
+	$("#idModal").modal("show");
+}
+$('#findIdCpNum').click(function() {
+	$.ajax({
+		method: "POST",
+		url: "/findId/auth/phone"
+	}).done(function(data) {
+		document.findId.EncodeData.value = data;
+		window.open('', 'popupChk', 'width=500, height=550, top=100, fullscreen=no, menubar=no, status=no, toolbar=no, titlebar=yes, location=no, scrollbar=no');
+		document.findId.action = "https://nice.checkplus.co.kr/CheckPlusSafeModel/checkplus.cb";
+		document.findId.target = "popupChk";
+		document.findId.submit();
+	});
+});
+function findIdReturnValue(returnValue){
+	$.ajax({
+        type: "post",
+        url: "/findId",
+        data : {mbrCpCertDi : returnValue}, 
+        success: function(data) {
+        	var result = null;
+        	if (data.result != null) {
+        		result = data.result;
+        		$("label[for='findIdmbrId']").append("<span></span>"+result.mbrId).trigger("create");
+        		$("label[for='findIdmbrId']").css("display", "");
+        		$("#findIdmbrId").val(result.mbrId);
+        		$("#findIdmbrId").css("display", "");
+        		$("#mbrRegDt").text("가입일자 : " + result.mbrRegDt);
+        		$("#mbrRegDt").css("display", "");
+        		$("#findIdLoginBtn").css("display", "");
+        		$("#findIdFindPwdBtn").css("display", "");
+        	}else{
+        		modalAlertShow("등록된 회원 정보가 없습니다.","");
+        	}
+        },
+        error: function(error) {
+            alert("오류 발생" + error);
+        }
+	})
+}
+$("#findIdLoginBtn").click(function() {
+	$("#txt_Id").val($("#findIdmbrId").val());
+	$("#idModal").modal("hide");
+	$("#loginModal").modal("show");
+});
+$("#findIdFindPwdBtn").click(function() {
+
+});
+</script>
+
+<!-- 비밀번호찾기 -->
+<div class="modal fade modal-s" id="passModal" tabindex="-1" role="dialog" aria-labelledby="passModalLabel" aria-hidden="true">
+	<form id="findPwd" name="findPwd" method="post">
+	<div class="modal-dialog modal-baeg max-w480">
+		<div class="modal-content">
+			<div class="modal-header">
+				<div class="baegs">
+					<h2>비밀번호찾기</h2>
+				    <img src="resources/img/ba/icon-3.png" class="con-img" />
+				    <div class="close" data-dismiss="modal" aria-label="Close" onclick="findPwrModalClose()"><img src="resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body login-body">
+				<div class="id-box">
+					<div class="input-box">
+						<p class="inp-p" style="text-align:left;" id="findPwdMbrIdCheck">비밀번호를 찾고자하는 아이디를 입력해주세요.</p>
+						<input type="text" class="input-3" placeholder="아이디(email)" id="findPwdMbrId"/>
+					</div>
+					<div class="input-box" style="display:none;" id="findPwdMbrPwdForm1">
+						<input type="password" class="input-3" id="findPwdMbrPwd1" placeholder="새 비빌먼호" />
+						<p class="inp-p" id="findPwdMbrPwdCheck1" style="text-align:left;">영문/숫자/특수문자 2가지 이상 조합 (8~20자)</p>
+						<p class="inp-p" id="findPwdMbrPwdCheck2" style="text-align:left;">3개 이상 연속되거나 동일한 문자/숫자 제외, 아이디(이메일) 제외</p>
+					</div>
+					<div class="input-box" style="display:none;" id="findPwdMbrPwdForm2">
+						<input type="password" class="input-3" id="findPwdMbrPwd2" placeholder="새 비빌먼호 확인" />
+						<p class="inp-p" id="findPwdMbrPwdCheck3" style="text-align:left;">확인을 위해 새 비밀번호를 다시 입력해주세요.</p>
+					</div>
+					<!-- <div class="input-box input-group">
+						<div class="input-drox">
+							<input type="text" class="input-3" placeholder="인증번호를 입력하세요" />
+							<span class="id-time">60초</span>
+						</div>
+						<button type="button" class="group-btn">재전송</button>
+					</div> -->
+					<div class="bat-box3 mg_t30">
+						<button type="button" class="ba-btn1" id="findPwdMbrIdBtn"><span>확인</span></button>
+						<button type="button" class="ba-btn2" id="findPwdCpNum" style="display:none;"><span>본인명의 휴대전화로 인증</span></button>
+						<button type="button" class="ba-btn1" id="findPwdSubmit" onclick="changePasswrd()"style="display:none;"><span>확인</span></button>
+					</div>
+					<input type="hidden" name="m" value="checkplusSerivce">	<!-- 필수 데이타로, 누락하시면 안됩니다. -->
+					<input type="hidden" name="EncodeData">					<!-- 위에서 업체정보를 암호화 한 데이타입니다. -->
+				</div>
+			</div>
+		</div>
+	</div>
+	</form>
+</div>
+<script th:inline="javascript">
+function openFindPwdModal(){
+	$('#loginModal').modal('hide');
+	$('#passModal').modal('show');
+}
+$('#findPwdCpNum').click(function() {
+	$.ajax({
+		method: "POST",
+		url: "/findPwd/auth/phone"
+	}).done(function(data) {
+		document.findPwd.EncodeData.value = data;
+		window.open('', 'popupChk', 'width=500, height=550, top=100, fullscreen=no, menubar=no, status=no, toolbar=no, titlebar=yes, location=no, scrollbar=no');
+		document.findPwd.action = "https://nice.checkplus.co.kr/CheckPlusSafeModel/checkplus.cb";
+		document.findPwd.target = "popupChk";
+		document.findPwd.submit();
+	});
+});
+function findPwrModalClose(){
+	$("#findPwd")[0].reset();
+	$("#findPwdMbrIdCheck").text("비밀번호를 찾고자하는 아이디를 입력해주세요.");
+	$("#findPwdMbrIdCheck").css("color","#999999");
+	$("#findPwdCpNum").css("display","none");
+	$("#findPwdMbrIdBtn").css("display","");
+	$("#findPwdMbrId").attr("readonly", false);
+}
+//아이디 중복 체크
+$("#findPwdMbrIdBtn").click(function() {
+	var dataCheckCount = {};
+	var mbrIdParam = $("#findPwdMbrId").val();
+	if(!CheckEmail(mbrIdParam)) {
+		$("#findPwdMbrIdCheck").text("아이디(email)를 올바르게 입력해주세요.");
+		$("#findPwdMbrIdCheck").css("color","red");
+	}else{
+		$.ajax({
+			type: "post",
+			url: "/myPage/memberIdChkData",
+			data:{
+				mbrId : mbrIdParam
+			},
+			success: function(data) {
+				dataCheckCount = data.memberCheck.memberIdCheck[0];
+				if(dataCheckCount > 0) {
+					$("#findPwdMbrIdCheck").text("");
+					$("#findPwdMbrIdCheck").css("color","#999999");
+					$("#findPwdCpNum").css("display","");
+					$("#findPwdMbrIdBtn").css("display","none");
+					$("#findPwdMbrId").attr("readonly", true);
+				}else{
+					$("#findPwdMbrIdCheck").text("존재하지 않는 아이디(email) 입니다.");
+					$("#findPwdMbrIdCheck").css("color","red");
+					return false;
+				}
+			},
+			error: function(error) {
+			    alert("오류 발생" + errorJson);
+			}
+		});
+	}
+});
+function findPwdReturnValue(returnValue){
+   	if (returnValue != null) {
+   		$("#findPwdMbrPwdForm1").css("display", "");
+   		$("#findPwdMbrPwdForm2").css("display", "");
+   		$("#findPwdSubmit").css("display", "");
+   		$("#findPwdCpNum").css("display", "none");
+   	}else{
+   		modalAlertShow("등록된 회원 정보가 없습니다.","");
+   	}
+}
+function changePasswrd(){
+	//비밀번호--------------------------------------------------------------------//
+	var mbrPasswrd = $("#findPwdMbrPwd1").val();
+	var mbrPasswrdConfirm = $("#findPwdMbrPwd2").val();
+	var mbrId = $("#findPwdMbrId").val();
+	if(isEmpty(mbrPasswrd)) {
+		$('#findPwdMbrPwdCheck1').css('color','red');
+		$('#findPwdMbrPwdCheck2').css('color','#999999');
+		return;
+	} 
+	if(!/^[a-zA-Z0-9!@#$%^&*()?_~]{8,20}$/.test(mbrPasswrd))
+	{
+		$('#findPwdMbrPwdCheck1').css('color','red');
+		$('#findPwdMbrPwdCheck2').css('color','#999999');
+		return;
+	}
+	var chk = 0;
+	if(mbrPasswrd.search(/[0-9]/g) != -1 ) chk ++;
+	if(mbrPasswrd.search(/[a-z]/ig)  != -1 ) chk ++;
+	if(mbrPasswrd.search(/[!@#$%^&*()?_~]/g)  != -1  ) chk ++;
+	if(chk < 2)
+	{
+		$('#findPwdMbrPwdCheck1').css('color','red');
+		$('#findPwdMbrPwdCheck2').css('color','#999999');
+		return;
+	}
+	 
+	 var SamePass_0 = 0; //동일문자 카운트
+	 var SamePass_1 = 0; //연속성(+) 카운드
+	 var SamePass_2 = 0; //연속성(-) 카운드
+	 
+	 var chr_pass_0;
+	 var chr_pass_1;
+	 
+	 for(var i=0; i < mbrPasswrd.length; i++) {
+	  chr_pass_0 = mbrPasswrd.charAt(i);
+	  chr_pass_1 = mbrPasswrd.charAt(i+1);
+	 
+	  //동일문자 카운트
+	  if(chr_pass_0 == chr_pass_1) {
+	   SamePass_0 = SamePass_0 + 1
+	  } // if
+	 
+	 
+	  //연속성(+) 카운드
+	  if(chr_pass_0.charCodeAt(0) - chr_pass_1.charCodeAt(0) == 1) {
+	   SamePass_1 = SamePass_1 + 1
+	  } // if
+	 
+	  //연속성(-) 카운드
+	  if(chr_pass_0.charCodeAt(0) - chr_pass_1.charCodeAt(0) == -1) {
+	  	SamePass_2 = SamePass_2 + 1
+	  } // if
+	 } // for
+	 
+	 if(SamePass_0 > 1) {
+		 $('#findPwdMbrPwdCheck1').css('color','#999999');
+		 $('#findPwdMbrPwdCheck2').css('color','red');
+		 return;
+	 } // if
+	 
+	 if(SamePass_1 > 1 || SamePass_2 > 1 )  {
+		 $('#findPwdMbrPwdCheck1').css('color','#999999');
+		 $('#findPwdMbrPwdCheck2').css('color','red');
+		 return;
+	 }
+	 // 비밀번호 아이디 포함 여부
+	 if(mbrPasswrd.search(mbrId)>-1)
+	 {
+		 $('#mbrPwdCheckU').css('color','#999999');
+		 $('#mbrPwdCheckD').css('color','red');
+		  return;
+	 }
+	
+	 $('#findPwdMbrPwdCheck1').css('color','#999999');
+	 $('#findPwdMbrPwdCheck2').css('color','#999999');
+	 
+	 
+	//비밀번호.비밀번호확인 일치 체크 mbrPwdReCheck
+	if(mbrPasswrd != mbrPasswrdConfirm) {
+		fn_validation('findPwdMbrPwdCheck3','비밀번호가 일치 하지 않습니다.', 'R');
+		return;
+	}
+	
+	fn_validation('findPwdMbrPwdCheck3','확인을 위해 새 비밀번호를 다시 입력해주세요.', 'B');
+	
+	//비밀번호--------------------------------------------------------------------//
+	$.ajax({
+        type: "post",
+        url: "/changePasswrd",
+        data : {
+        	mbrPasswrd : mbrPasswrd,
+        	mbrId : mbrId
+		}, 
+        success: function(data) {
+        	if (data > 0) {
+        		result = data.result;
+        		modalAlertShow("비밀번호가 변경되었습니다.", "reload");
+        	}else{
+        		if(data == -1){
+        			$("#findPwdMbrPwd1").val("");
+        			$("#findPwdMbrPwd2").val("");
+        			modalAlertShow("이미 등록된 비밀번호 입니다. 다시 입력해주세요.", "findPwdMbrPwd1");
+        		}else{
+        			modalAlertShow("비밀번호 변경에 실패했습니다.", "reload");
+        		}
+        	}
+        },
+        error: function(error) {
+            alert("오류 발생" + error);
+        }
+	})
+}
+</script>
 
 <script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js" charset="utf-8"></script>
 
@@ -242,13 +577,6 @@
 		var googleUrl = "https://accounts.google.com/o/oauth2/v2/auth?scope=https://www.googleapis.com/auth/userinfo.email&access_type=offline&include_granted_scopes=true&response_type=code&state=state_parameter_passthrough_value&redirect_uri=http://localhost:8088/auth/google/callback&client_id=449213206661-c9iopfi3an6fglsajlq2npnp1c12f14s.apps.googleusercontent.com";
 	 	window.open(googleUrl,"_blank","height=600,width=577,top=100,left=200,scrollbars=yes,resizable=yes");
 	}
-		
-	function fnMemberJoin(){
-		$('#memberModal').modal('show');
-		//로그인 모달
-		$('#loginModal').modal('hide');
-	}
-	
 </script>
 
 <!-- 회원가입 -->
@@ -290,6 +618,7 @@
 							<button type="button" class="group-btn" id="mbrCpNumBtn">인증하기</button>
 							<input type="hidden" id="mbrCpCertYn" name="mbrCpCertYn" value="N">
 							<input type="hidden" id="mbrCpCertDate" name="mbrCpCertDate" value="">
+							<input type="hidden" id="mbrCpCertDi" name="mbrCpCertDi" value="">
 						</div>
 						<div class="input-box">
 							<p class="inp-p" id="mainSmsCertificationCheck" style="display:none;color:red">휴대폰 인증완료</p>
@@ -361,13 +690,32 @@ $(document).ready(function() {
 });
 
 //휴대폰 인증 성공
-function mainMobileAuthSuccess() {
-		
-	$("#mainSmsCertificationCheck").css('display',"block");
-	fn_validation('mainSmsCertificationCheck','휴대폰 인증완료.', 'B');
-	$("#mbrNmCheck").css('display',"none");
-	fn_validation('mbrNmCheck','', 'B');
-	
+function mainMobileAuthSuccess(returnValue) {
+	$.ajax({
+        type: "post",
+        url: "/memberDuplicateCheck",
+        data: {
+        		mbrCpCertDi : returnValue
+        },
+        success: function(data) {
+        	if(data > 0){
+        		document.memberInput.mbrNm.value ="";
+        		document.memberInput.mbrCpNum.value="";
+        		document.memberInput.mbrCpCertYn.value="N";
+        		document.memberInput.mbrCpCertDate.value="";
+        		fn_validation('mbrNmCheck','이미 등록된 회원입니다.', 'R');
+        	}else{
+        		$("#mainSmsCertificationCheck").css('display',"block");
+        		fn_validation('mainSmsCertificationCheck','휴대폰 인증완료.', 'B');
+        		$("#mbrNmCheck").css('display',"none");
+        		fn_validation('mbrNmCheck','', 'B');
+        		document.memberInput.mbrCpCertDi.value=returnValue;
+        	}
+        },
+        error: function(error) {
+            alert("오류 발생" + error);
+        }
+	});	
 }
 //휴대폰 인증 실패
 function mainMobileAuthFail() {
@@ -521,6 +869,10 @@ $("#memberInputBtn").on('click', function(event){
 	var mbrCpCertYn = $("#mbrCpCertYn").val();
 	//휴대폰 본인인증 날짜
 	var mbrCpCertDate = $("#mbrCpCertDate").val();
+	//휴대폰 본인인증 DI
+	var mbrCpCertDi = $("#mbrCpCertDi").val();
+	//소셜 회원 로그인 구분
+	var mbrSocialSort = "GEN";
 	
 	if(isEmpty(mbrId)) {
 		fn_validation('mbrIdCheck','이메일을 입력해주세요.', 'R');
@@ -548,8 +900,8 @@ $("#memberInputBtn").on('click', function(event){
 	if(mbrPasswrd.search(/[!@#$%^&*()?_~]/g)  != -1  ) chk ++;
 	if(chk < 2)
 	{
-		$('#mbrPwdCheckU').css('color','#999999');
-		$('#mbrPwdCheckD').css('color','red');
+		$('#mbrPwdCheckU').css('color','red');
+		$('#mbrPwdCheckD').css('color','#999999');
 		return;
 	}
 	 
@@ -642,7 +994,9 @@ $("#memberInputBtn").on('click', function(event){
 		  "mbrNm" : mbrNm,
 		  "mbrCpNum" : mbrCpNum,
 		  "mbrCpCertYn" : mbrCpCertYn,
-		  "mbrCpCertDate" : mbrCpCertDate
+		  "mbrCpCertDate" : mbrCpCertDate,
+		  "mbrCpCertDi" : mbrCpCertDi,
+		  "mbrSocialSort" : mbrSocialSort
 	 }
 	 
 	 
